Use new syntax for remote files and repos

--- a/main.conf
+++ b/main.conf
@@ -1,12 +1,12 @@
 # some basic security measures
-https://raw.githubusercontent.com/norm/suited/master/setup/full_disk_encryption.sh
-https://raw.githubusercontent.com/norm/suited/master/setup/password_after_screensaver.sh
+github:norm/suited:setup/full_disk_encryption.sh
+github:norm/suited:setup/password_after_screensaver.sh
 
 # setup xcode, homebrew and git
 # (this must be done before any repos or brewfiles can be used)
-https://raw.githubusercontent.com/norm/suited/master/setup/install_xcode.sh
-https://raw.githubusercontent.com/norm/suited/master/setup/homebrew.sh
-https://raw.githubusercontent.com/norm/suited/master/setup/git.sh
+github:norm/suited:setup/install_xcode.sh
+github:norm/suited:setup/homebrew.sh
+github:norm/suited:setup/git.sh
 
 # setup personal things
 user/$USER/main.conf
@@ -16,4 +16,4 @@ host/$HOST/main.conf
 
 # lastly, ensure software is up to date
 # (might have to reboot after this, so do it last)
-https://raw.githubusercontent.com/norm/suited/master/setup/software_update.sh
+github:norm/suited:setup/software_update.sh
