--- a/user/norm/main.conf
+++ b/user/norm/main.conf
@@ -1,5 +1,5 @@
 user/norm/Brewfile
 
-github:norm/home
-github:norm/homedir
-github:norm/osx_shortcuts
+repo github:norm/home
+repo github:norm/homedir
+repo github:norm/osx_shortcuts
