Checkout wiki repository

--- a/user/norm/main.conf
+++ b/user/norm/main.conf
@@ -3,3 +3,5 @@ user/norm/Brewfile
 repo github:norm/home
 repo github:norm/homedir
 repo github:norm/osx_shortcuts
+
+repo github:norm/wiki    ~/wiki
