Checkout `suit` and `suited` repositories

--- a/user/norm/main.conf
+++ b/user/norm/main.conf
@@ -5,3 +5,6 @@ repo github:norm/homedir
 repo github:norm/osx_shortcuts
 
 repo github:norm/wiki    ~/wiki
+
+repo github:norm/suit
+repo github:norm/suited
