Setup ruby with rbenv

--- a/main.conf
+++ b/main.conf
@@ -8,6 +8,9 @@ github:norm/suited:setup/install_xcode.sh
 github:norm/suited:setup/homebrew.sh
 github:norm/suited:setup/git.sh
 
+# ruby, if we must
+github:norm/suited:setup/ruby_with_rbenv.sh
+
 # setup personal things
 user/$USER/main.conf
 
