--- a/user/norm/main.conf
+++ b/user/norm/main.conf
@@ -1,15 +1,12 @@
 user/norm/Brewfile
 
-repo github:norm/home
-repo github:norm/homedir
 
 repo github:norm/wiki               ~/wiki
-
-repo github:norm/suit
-repo github:norm/suited
 
 repo github:norm/macos_defaults     ~/etc/macos/defaults
 repo github:norm/macos_shortcuts    ~/etc/macos/shortcuts
 
 github:norm/suited:setup/apply_defaults.sh
 github:norm/suited:setup/apply_shortcuts.sh
+
+github:norm/suited:setup/clone_starred_repos.sh
