My Sublime Text setup is a repo

--- a/user/norm/main.conf
+++ b/user/norm/main.conf
@@ -9,4 +9,6 @@ github:norm/suited:setup/apply_defaults.sh
 repo github:norm/macos_shortcuts    ~/etc/macos/shortcuts
 github:norm/suited:setup/apply_shortcuts.sh
 
+repo github:norm/sublime-text-configuration  ~/Library/Application Support/Sublime Text 3
+
 github:norm/suited:setup/clone_starred_repos.sh
