Separate suitfiles for shortcuts and defaults
This makes it easier to apply them alone directly from GitHub.

--- a/user/norm/main.conf
+++ b/user/norm/main.conf
@@ -6,11 +6,8 @@ setup/antirsi/
 
 repo github:norm/wiki               ~/wiki
 
-repo github:norm/macos_defaults     ~/etc/macos/defaults
-github:norm/suited:setup/apply_defaults.sh
-
-repo github:norm/macos_shortcuts    ~/etc/macos/shortcuts
-github:norm/suited:setup/apply_shortcuts.sh
+user/norm/defaults.conf
+user/norm/keyboard.conf
 
 repo github:norm/sublime-text-configuration  ~/Library/Application Support/Sublime Text 3
 
