Things has been removed from homebrew-cask
The rationale is that it is Mac App Store only, but it is not. For those of us who bought it before the Mac App Store ever existed, grabbing the trial and then giving it your licence still works.

--- a/user/norm/Brewfile
+++ b/user/norm/Brewfile
@@ -8,7 +8,8 @@ cask 'nvalt'
 cask 'rowanj-gitx'
 cask 'sublime-text'
 cask 'textmate'
-cask 'things'
+# FIXME reimplement in norm/homebrew-versions
+# cask 'things'
 cask 'vmware-fusion'
 
 mas '1Password', id: 443987910
