MercuryMover no longer works in Sierra

--- a/user/norm/main.conf
+++ b/user/norm/main.conf
@@ -1,7 +1,8 @@
 user/norm/Brewfile
 user/norm/Dockfile
 
-setup/mercurymover/
+# FIXME no longer works in Sierra
+# setup/mercurymover/
 setup/antirsi/
 
 repo github:norm/wiki               ~/wiki
