--- a/user/norm/Brewfile
+++ b/user/norm/Brewfile
@@ -4,6 +4,7 @@ brew 'watch'
 cask 'dropbox'
 cask 'launchbar'
 cask 'mercurymover'
+cask 'ngrok'
 cask 'nvalt'
 cask 'rowanj-gitx'
 cask 'sublime-text'
