--- a/user/norm/Brewfile
+++ b/user/norm/Brewfile
@@ -21,4 +21,5 @@ cask 'vmware-fusion'
 mas '1Password', id: 443987910
 mas 'GIF Brewery', id: 1081413713
 mas 'Markoff', id: 1084713122
+mas 'Slack', id: 803453959
 mas 'xScope', id: 889428659
