--- a/preferences.conf
+++ b/preferences.conf
@@ -4,8 +4,9 @@ Dockfile
 setup/antirsi/
 setup/appupdates/
 
-repo github:norm/wiki                        ~/wiki
-repo github:norm/sublime-text-configuration  ~/Library/Application Support/Sublime Text 3
+download github:norm/suit:words.txt                 ~/Library/Spelling/LocalDictionary
+repo     github:norm/wiki                           ~/wiki
+repo     github:norm/sublime-text-configuration     ~/Library/Application Support/Sublime Text 3
 
 defaults.conf
 keyboard.conf
