Setup bash properly

--- a/preferences.conf
+++ b/preferences.conf
@@ -4,6 +4,9 @@ Dockfile
 setup/antirsi/
 setup/appupdates/
 
+repo github:norm/bash-composition
+repo github:norm/homedir
+
 repo github:norm/wiki                        ~/wiki
 repo github:norm/sublime-text-configuration  ~/Library/Application Support/Sublime Text 3
 
