--- a/preferences.conf
+++ b/preferences.conf
@@ -4,6 +4,8 @@ Dockfile
 setup/antirsi/
 setup/appupdates/
 
+setup/hammerspoon/hammerspoon.conf
+
 repo github:norm/wiki                        ~/wiki
 repo github:norm/sublime-text-configuration  ~/Library/Application Support/Sublime Text 3
 
